[project]
name = "bone-rep-mlforboneimaging"
version = "1.0.0"
description = "Companion analysis for a manuscript (Jupyter notebook + derived outputs)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
  "jupyter",
  "ipykernel",
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "xgboost",
  "shap",
  "umap-learn",
  "opencv-python",
]
